<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Snoozi</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="welcome">Snoozi is a whole new morning experience. Just set your alarm, and let Snoozi do the rest!</string>
    <string name="activate">Activate Alarm</string>
    <string name="Hour">Hour</string>
    <string name="Repeat">Repeat</string>
    <string name="Vibration">Vibration</string>
    <string name="dotline">---</string>
    <string name="done">I\'m done !</string>
    <string name="preversion">This is only a prototype,many more features and updated designs are yet to come!</string>
    <string name="Everyday">Everyday</string>
    <string name="alarmon">Alarm ON</string>
    <string name="alarmoff">Alarm OFF</string>
    <string name="snoozeinfivemin">This alarm will repeat in 5 minutes</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="snooziTeam">Snoozi Team</string>
    <string name="fakedate">08 May 14</string>
    <string name="blank"></string>
    <string name="alarnIsSet">Alarm is set in</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="second">second</string>
    <string name="seconds">seconds</string>

    <string-array name="dayofweek">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="dayofweekshort">
        <item> Mon.</item>
        <item> Tue.</item>
        <item> Wed.</item>
        <item> Thu.</item>
        <item> Fri.</item>
        <item> Sat.</item>
        <item> Sun.</item>
    </string-array>
    <string-array name="hometabs">
        <item> Alarm</item>
        <item> Happening</item>
        <item> My Gallery</item>
    </string-array>
    <string-array name="snooziphrase">
        <item>Advantage of being an Unemployed Dad</item>
        <item>Rick Rolled by Snoozi !</item>
        <item>Have fun with your morning wood!</item>
    </string-array>

    <string name="volume">Alarm Volume</string>
    <string name="title_activity_survey">SurveyActivity</string>
    <string name="thankyou">"Congratulations! You have made it through! Thank you for your continuous support! "</string>
    <string name="howrating">How would you rate the experience?</string>
    <string name="sendcomment">We would love to hear any comment, suggestions and feedbacks:</string>
    <string name="sendbtn">Send with Love</string>
    <string name="finalthanks">All these informations will be carefully studied and used to improve our product!</string>
<string name="sendthanks">Thank you for your comments</string>
<string name="setAlarm">Set an alarm</string>
<string name="record">Record Video</string>
<string name="startrecord">Start Recording</string>
  <string name="stoprecord">Stop Recording</string>
    
</resources>