<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#641213" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:layout_margin="10dp"
            android:orientation="vertical" >
            
            

                <VideoView
                    android:id="@+id/myvideoView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp" android:background="#0000"
                    />
            <ProgressBar
                android:id="@+id/Progressbar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="fill_parent"
                android:layout_height="5dp" />
            
           
           

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

              
                <TextView
                    android:id="@+id/txtinfo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="left"
                    android:text="@string/app_name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/pleaseRate" />

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1.19"
                    android:gravity="fill_horizontal"
                    android:orientation="horizontal"
                    android:paddingBottom="50dp" >

                    <RadioButton
                        android:id="@+id/radioDislike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dislike"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/radioLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:layout_marginLeft="40dp"
                        android:layout_weight="1"
                        android:text="@string/like"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#fff"
                        android:textStyle="bold" />
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

<com.google.android.gms.ads.AdView
    android:id="@+id/adView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    ads:adSize="BANNER"
    ads:adUnitId="ca-app-pub-9128863139379397/2202006469" />

</RelativeLayout>